Bug 890573 - Ignore webgl.disable-extensions for the chrome-only WEBGL_debug_renderer_info. r=jgilbert